--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "webrtcvideobroadcast",
+  "name": "whiteboard",
   "version": "1.0.0",
-  "description": "WebRTC example for a video broadcast",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "WebRTC",
-    "SocketIO"
-  ],
-  "author": "Tanner Gabriel",
-  "license": "MIT",
+  "description": "A simple collaborative whiteboard using socket.io",
+  "main": "index.js",
+  "keywords": ["socket.io", "whiteboard"],
   "dependencies": {
-    "express": "^4.17.1",
-    "socket.io": "^4.0.1"
+    "express": "4.17.2",
+    "socket.io": "^4.0.0"
   },
-  "devDependencies": {
-    "eslint": "8.0.1"
-  }
+  "scripts": {
+    "start": "node server.js"
+  },
+  "author": "Damien Arrachequesne",
+  "license": "MIT"
 }
